--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.5.0",
+		"@tailwindcss/forms": "^0.5.3",
 		"@types/better-sqlite3": "^7.6.4",
 		"@types/cron": "^2.0.1",
 		"@types/node": "^20.2.5",
@@ -31,6 +32,7 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-dnd-action": "^0.9.22",
 		"svelte-preprocess": "^5.0.3",
 		"tailwindcss": "^3.3.1",
 		"tslib": "^2.4.1",
@@ -44,8 +46,11 @@
 		"chartjs-adapter-date-fns": "^3.0.0",
 		"cron": "^2.3.1",
 		"date-fns": "^2.30.0",
+		"date-fns-tz": "^2.0.0",
 		"dotenv": "^16.1.4",
 		"kysely": "^0.25.0",
-		"svelte-chartjs": "^3.1.2"
+		"svelte-chartjs": "^3.1.2",
+		"zod": "^3.21.4",
+		"zod-form-data": "^2.0.1"
 	}
 }
