--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,9 @@
 		"eslint-plugin-svelte": "^2.26.0",
 		"postcss": "^8.4.23",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
+		"prettier": "^3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
+		"prettier-plugin-tailwindcss": "^0.5.6",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-dnd-action": "^0.9.22",
