--- a/.github/workflows/docker-template.yml
+++ b/.github/workflows/docker-template.yml
@@ -1,10 +1,9 @@
-name: Frontend - Docker Build/Publish Image
-
 on:
-  push:
-    branches: [ "*" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_call:
+    inputs:
+      service:
+        required: true
+        type: string
 
 env:      
   REGISTRY: ghcr.io
@@ -13,7 +12,7 @@ env:
 
 jobs:
 
-  build:
+  build-push:
 
     runs-on: ubuntu-latest
 
@@ -46,12 +45,12 @@ jobs:
       id: meta
       uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
       with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ inputs.service }}
     
     - name: Build and Push
       uses: docker/build-push-action@v5
       with:
-        context: ./frontend
+        context: ./${{ inputs.service }}
         platforms: linux/amd64,linux/arm64
         push: true
         tags: ${{ steps.meta.outputs.tags }}
