--- a/solarmax-service/requirements.txt
+++ b/solarmax-service/requirements.txt
@@ -1,16 +1,13 @@
-anyio==3.7.0
-click==8.1.3
-fastapi==0.96.0
+annotated-types==0.6.0
+anyio==3.7.1
+click==8.1.7
+exceptiongroup==1.1.3
+fastapi==0.103.2
 h11==0.14.0
-httptools==0.5.0
 idna==3.4
-pydantic==1.10.9
-python-dotenv==1.0.0
-PyYAML==6.0
+pydantic==2.4.2
+pydantic_core==2.10.1
 sniffio==1.3.0
 starlette==0.27.0
-typing_extensions==4.6.3
-uvicorn==0.22.0
-uvloop==0.17.0
-watchfiles==0.19.0
-websockets==11.0.3
+typing_extensions==4.8.0
+uvicorn==0.23.2
