--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,12 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@skeletonlabs/skeleton": "^1.7.1",
+		"@skeletonlabs/skeleton": "^2.4.0",
+		"@skeletonlabs/tw-plugin": "^0.2.3",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.5.0",
-		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/forms": "^0.5.6",
 		"@types/better-sqlite3": "^7.6.4",
 		"@types/cron": "^2.0.1",
 		"@types/node": "^20.2.5",
@@ -35,10 +36,11 @@
 		"svelte-check": "^3.0.1",
 		"svelte-dnd-action": "^0.9.22",
 		"svelte-preprocess": "^5.0.3",
-		"tailwindcss": "^3.3.1",
+		"tailwindcss": "^3.3.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
+		"vite": "^4.3.0",
+		"vite-plugin-tailwind-purgecss": "^0.1.3"
 	},
 	"type": "module",
 	"dependencies": {
