--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,10 @@
 	"devDependencies": {
 		"@skeletonlabs/skeleton": "^2.5.0",
 		"@skeletonlabs/tw-plugin": "^0.2.4",
-		"@sveltejs/adapter-auto": "^2.1.1",
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.30.3",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^2.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/forms": "^0.5.7",
 		"@types/better-sqlite3": "^7.6.7",
 		"@types/node": "^20.9.0",
@@ -33,13 +34,13 @@
 		"prettier-plugin-tailwindcss": "^0.5.7",
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.0",
-		"svelte-dnd-action": "^0.9.31",
+		"svelte-dnd-action": "^0.9.35",
 		"svelte-preprocess": "^5.1.0",
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
-		"vite": "^4.5.0",
-		"vite-plugin-tailwind-purgecss": "^0.1.3"
+		"vite": "^5.0.0",
+		"vite-plugin-tailwind-purgecss": "^0.2.0"
 	},
 	"type": "module",
 	"dependencies": {
