--- a/.github/workflows/docker-template.yml
+++ b/.github/workflows/docker-template.yml
@@ -51,6 +51,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: ./${{ inputs.service }}
+        target: ${{ inputs.service }}
         platforms: linux/amd64,linux/arm64
         push: true
         tags: ${{ steps.meta.outputs.tags }}
