--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,8 +2,24 @@ version: '3.8'
 
 services:
   frontend:
-    build: ./frontend
+    build: 
+      target: frontend
+    ports:
+      - 80:3000
+    environment:
+      API_PATH: http://solarmax-service:8000
+      DB_PATH: /data/data.db
+      ORIGIN: http://localhost
+    volumes: 
+      - ./data:/data:rw
   solarmax-service:
-    build: ./solarmax-service
+    build: 
+      target: solarmax-service   
   update-scheduler: 
-    build: ./update-scheduler
+    build: 
+      target: update-scheduler   
+    depends_on:
+      - frontend
+    environment:
+      API_PATH: http://frontend:3000
+      CRON_PATTERN: "0 * * * * *"
