--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "^pnpm@8.15.1",
+  "packageManager": "pnpm@8.15.1",
   "devDependencies": {
     "prettier": "^3.1.0",
     "prettier-plugin-svelte": "^3.1.0",
