--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches: 
       - main
-      - '*'
     tags:
       - '*'
+  pull_request:
+    branches:
+      - main
 
 env:      
   REGISTRY: ghcr.io
