--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
 		"@sveltejs/kit": "^2.20.8",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/vite": "^4.1.5",
 		"@types/better-sqlite3": "^7.6.13",
 		"@types/node": "^22.15.17",
 		"@typescript-eslint/eslint-plugin": "^8.32.0",
@@ -45,19 +46,16 @@
 		"eslint-plugin-svelte": "^3.5.1",
 		"lucide-svelte": "^0.508.0",
 		"mode-watcher": "^1.0.6",
-		"postcss": "^8.5.3",
-		"postcss-load-config": "^5.1.0",
 		"svelte": "^5.28.2",
 		"svelte-check": "^4.1.7",
 		"svelte-dnd-action": "^0.9.61",
 		"svelte-preprocess": "^6.0.3",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^1.0.0",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.5",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
-		"vite": "^6.3.5",
-		"vite-plugin-tailwind-purgecss": "^0.3.5"
+		"vite": "^6.3.5"
 	},
 	"files": [
 		"build",
