--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,23 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path=../.prettierignore --check . && eslint ./src",
 		"format": "prettier --ignore-path=../.prettierignore --write .",
-		"scn:add": "shadcn-svelte add"
+		"db:push": "drizzle-kit push",
+		"db:migrate": "drizzle-kit migrate",
+		"db:migrate:prod": "NODE_ENV=production vite-node ./drizzle/migrate.ts",
+		"db:generate": "drizzle-kit generate",
+		"db:studio": "drizzle-kit studio"
 	},
 	"dependencies": {
 		"better-sqlite3": "^11.10.0",
 		"date-fns": "^2.30.0",
 		"date-fns-tz": "^2.0.1",
 		"dotenv": "^16.5.0",
+		"drizzle-orm": "^0.43.1",
 		"globals": "^16.1.0",
-		"kysely": "^0.28.2",
+		"kysely": "0.28.2",
+		"postgres": "^3.4.5",
 		"typescript-eslint": "^8.32.0",
+		"vite-node": "^3.1.3",
 		"zod": "^3.24.4",
 		"zod-form-data": "^2.0.7"
 	},
@@ -41,6 +48,7 @@
 		"autoprefixer": "^10.4.21",
 		"bits-ui": "^1.4.6",
 		"clsx": "^2.1.1",
+		"drizzle-kit": "^0.31.1",
 		"eslint": "^9.26.0",
 		"eslint-config-prettier": "^10.1.3",
 		"eslint-plugin-svelte": "^3.5.1",
@@ -59,6 +67,7 @@
 	},
 	"files": [
 		"build",
+		"drizzle",
 		"migrate.js",
 		"migrations"
 	]
