fix: added timescaledb dependency to coolify deployment

--- a/docker-compose-coolify.yml
+++ b/docker-compose-coolify.yml
@@ -16,6 +16,8 @@ services:
       DATABASE_URL: "postgres://root:${POSTGRES_PASSWORD}@timescaledb:5432/solar-panel"
     volumes: 
       - ./data:/data:rw
+    depends_on:
+      - timescaledb
   solarmax-service:
     build: 
       target: solarmax-service   
