--- a/docker-compose-coolify.yml
+++ b/docker-compose-coolify.yml
@@ -31,7 +31,8 @@ services:
       CRON_PATTERN: "0 * * * * *"
   timescaledb:
     image: timescale/timescaledb-ha:pg17
-    expose: 5432
+    expose:
+      - 5432
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
