--- a/docker-compose-coolify.yml
+++ b/docker-compose-coolify.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   frontend:
-    build: 
+    build:
       target: frontend
     expose:
       - 3000
@@ -13,29 +13,19 @@ services:
 
       DB_USE_DRIZZLE: true
 
-      DATABASE_URL: "postgres://root:${POSTGRES_PASSWORD}@timescaledb:5432/solar-panel"
-    volumes: 
+      DATABASE_URL: '${DATABASE_URL}'
+    volumes:
       - ./data:/data:rw
     depends_on:
       - timescaledb
   solarmax-service:
-    build: 
-      target: solarmax-service   
-  update-scheduler: 
-    build: 
-      target: update-scheduler   
+    build:
+      target: solarmax-service
+  update-scheduler:
+    build:
+      target: update-scheduler
     depends_on:
       - frontend
     environment:
       API_PATH: http://frontend:3000
-      CRON_PATTERN: "0 * * * * *"
-  timescaledb:
-    image: timescale/timescaledb-ha:pg17
-    expose:
-      - 5432
-    environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: solar-panel
-    volumes:
-      - ./pgdata:/home/postgres/pgdata/data
+      CRON_PATTERN: '0 * * * * *'
