--- a/docker-compose-coolify.yml
+++ b/docker-compose-coolify.yml
@@ -17,7 +17,11 @@ services:
     volumes:
       - ./data:/data:rw
     healthcheck:
-      test: curl --fail http://localhost:3000 || exit 1
+      test: curl --fail http://localhost:3000/health || exit 1
+      interval: 30s
+      timeout: 5s
+      start_period: 10s
+      retries: 3
   solarmax-service:
     build:
       target: solarmax-service
