--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -9,7 +9,7 @@ services:
     environment:
       API_PATH: http://solarmax-service:8000
       DB_PATH: /data/data.db
-      ORIGIN: http://localhost
+      ORIGIN: '${ORIGIN}'
 
       DATABASE_URL: "postgres://root:password@timescaledb:5432/solar-panel"
     volumes: 
@@ -19,6 +19,12 @@ services:
       options:
         max-size: "1k"
         max-file: "3"
+    healthcheck:
+      test: curl --fail http://localhost:3000/health || exit 1
+      interval: 30s
+      timeout: 5s
+      start_period: 10s
+      retries: 3
 
   solarmax-service: 
     image: ghcr.io/hanlap/solar-panel/solarmax-service:main 
