--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,8 @@
 		"zod-form-data": "^2.0.7"
 	},
 	"devDependencies": {
-		"@internationalized/date": "^3.8.0",
-		"@lucide/svelte": "^0.508.0",
+		"@internationalized/date": "^3.8.1",
+		"@lucide/svelte": "^0.482.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/kit": "^2.20.8",
@@ -46,15 +46,16 @@
 		"@typescript-eslint/parser": "^8.32.0",
 		"apexcharts": "^4.7.0",
 		"autoprefixer": "^10.4.21",
-		"bits-ui": "^1.4.6",
+		"bits-ui": "^2.4.0",
 		"clsx": "^2.1.1",
+		"cmdk-sv": "^0.0.19",
 		"drizzle-kit": "^0.31.1",
 		"eslint": "^9.26.0",
 		"eslint-config-prettier": "^10.1.3",
 		"eslint-plugin-svelte": "^3.5.1",
 		"lucide-svelte": "^0.508.0",
 		"mode-watcher": "^1.0.6",
-		"svelte": "^5.28.2",
+		"svelte": "^5.33.10",
 		"svelte-check": "^4.1.7",
 		"svelte-dnd-action": "^0.9.61",
 		"svelte-preprocess": "^6.0.3",
@@ -62,6 +63,7 @@
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.1.5",
 		"tslib": "^2.8.1",
+		"tw-animate-css": "^1.3.2",
 		"typescript": "^5.8.3",
 		"vite": "^6.3.5"
 	},
