--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
 	"version": "0.0.1",
 	"private": true,
 	"type": "module",
+	"engines": {
+		"node": ">=24.0.0"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -18,7 +21,7 @@
 		"db:studio": "drizzle-kit studio"
 	},
 	"dependencies": {
-		"better-sqlite3": "^11.10.0",
+		"better-sqlite3": "^12.4.1",
 		"date-fns": "^2.30.0",
 		"date-fns-tz": "^2.0.1",
 		"dotenv": "^16.5.0",
@@ -28,16 +31,16 @@
 		"postgres": "^3.4.5",
 		"typescript-eslint": "^8.32.0",
 		"vite-node": "^3.1.3",
-		"zod": "^3.24.4",
-		"zod-form-data": "^2.0.7"
+		"zod": "^4.1.11",
+		"zod-form-data": "^3.0.1"
 	},
 	"devDependencies": {
 		"@internationalized/date": "^3.8.1",
 		"@lucide/svelte": "^0.482.0",
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.20.8",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@sveltejs/adapter-auto": "^6.1.0",
+		"@sveltejs/adapter-node": "^5.3.2",
+		"@sveltejs/kit": "^2.48.4",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/vite": "^4.1.5",
 		"@types/better-sqlite3": "^7.6.13",
@@ -52,11 +55,11 @@
 		"drizzle-kit": "^0.31.1",
 		"eslint": "^9.26.0",
 		"eslint-config-prettier": "^10.1.3",
-		"eslint-plugin-svelte": "^3.5.1",
+		"eslint-plugin-svelte": "^3.12.4",
 		"lucide-svelte": "^0.508.0",
 		"mode-watcher": "^1.0.6",
-		"svelte": "^5.33.10",
-		"svelte-check": "^4.1.7",
+		"svelte": "^5.43.6",
+		"svelte-check": "^4.3.2",
 		"svelte-dnd-action": "^0.9.61",
 		"svelte-preprocess": "^6.0.3",
 		"tailwind-merge": "^2.6.0",
