refactor(frontend): moved code around a bit

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,4 @@
-API_PATH=http://localhost:8000
+SOLARMAX_API_PATH=http://localhost:8000
 DB_PATH=./data/data.db
 
 DATABASE_URL="postgres://root:password@localhost:5432/solar-panel"
