--- a/docker-compose-coolify.yml
+++ b/docker-compose-coolify.yml
@@ -7,7 +7,7 @@ services:
     expose:
       - 3000
     environment:
-      API_PATH: http://solarmax-service:8000
+      SOLARMAX_API_PATH: http://solarmax-service:8000
       DB_PATH: /data/data.db
       ORIGIN: http://localhost
 
