--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - 80:3000
     environment:
-      API_PATH: http://solarmax-service:8000
+      SOLARMAX_API_PATH: http://solarmax-service:8000
       DB_PATH: /data/data.db
       ORIGIN: '${ORIGIN}'
 
